[gd_scene load_steps=3 format=3 uid="uid://attendee_entity"]

[ext_resource type="Script" path="res://scripts/entities/attendee_visual.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/selection_ring.gd" id="2"]

[node name="Attendee" type="Node2D"]
script = ExtResource("1")

[node name="SelectionRing" type="Node2D" parent="."]
visible = false
script = ExtResource("2")

[node name="BodySprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="StageIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -18)
scale = Vector2(0.08, 0.08)
